Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5536

TapBGFetchCallback mutex acquire error

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public
    • None
    • hummer. rebalance test form 2 to 4 nodes.

    Description

      One of the servers died during rebalance eperf test. (2.0.0-1300). core dump log is attached.

      Thread 1 (Thread 0x7f85eed06700 (LWP 29548)):
      #0 0x00007f85f50a1885 in raise () from /lib64/libc.so.6
      #1 0x00007f85f50a3065 in abort () from /lib64/libc.so.6
      #2 0x00007f85efde1c50 in Mutex::acquire (this=0x5ca4000) at mutex.cc:73
      #3 0x00007f85efdfeaa2 in bool TapConnMap::performTapOp<Item*>(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, TapOperation<Item*>&, Item*) () from /opt/couchbase/lib/memcached/ep.so
      #4 0x00007f85efdfee65 in TapBGFetchCallback::callback(Dispatcher&, std::tr1::shared_ptr<Task>) () from /opt/couchbase/lib/memcached/ep.so
      #5 0x00007f85efda2d0f in Task::run(Dispatcher&, std::tr1::shared_ptr<Task>) () from /opt/couchbase/lib/memcached/ep.so
      #6 0x00007f85efda1bc0 in Dispatcher::run (this=0x5c6ca80) at dispatcher.cc:123
      #7 0x00007f85efda244b in launch_dispatcher_thread (arg=<value optimized out>) at dispatcher.cc:28
      #8 0x00007f85f54067f1 in start_thread () from /lib64/libpthread.so.0
      #9 0x00007f85f5154ccd in clone () from /lib64/libc.so.6

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liang Liang Guo (Inactive)
            ronnie Ronnie Sun (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty